--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="src/assets/wadol.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WADOL</title>
+    <title>WADOL - Watching Dolphine</title>
     
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
 
